# robust_tracker

./: CMAkeLists.txt  readme.md
New folder/: CMakeLists.txt
New folder/my_project/: CMakeLists.txt  my_test.cpp
libs/robust_follower/: CMakeLists.txt
libs/robust_follower/test/: CMakeLists.txt  robust_follower_test.cpp
robust_tracker/src/: robust_follower.cpp
src/: main.cpp
test/: CMakeLists.txt  robust_follower_test.cpp
